--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                     commodo.</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <img class="img-fluid" src="/img/about2.jpg" alt="">
+                <img class="img-fluid" src="img/about2.jpg" alt="">
 
             </div>
         </div>
@@ -113,7 +113,7 @@
                     commodo.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="/img/about3.jpg" alt="">
+                <img class="img-fluid" src="img/about3.jpg" alt="">
 
             </div>
         </div>
